test_regress/t/t_constraint_mode_unsup.out
%Error-UNSUPPORTED: t/t_constraint_mode_unsup.v:17:55: Unsupported: 'constraint_mode()' on static constraint
                                                     : ... note: In instance 't'
   17 |       $display("p.cons.constraint_mode()=%0d", p.cons.constraint_mode());
      |                                                       ^~~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_constraint_mode_unsup.v:18:14: Unsupported: 'constraint_mode()' on static constraint
                                                     : ... note: In instance 't'
   18 |       p.cons.constraint_mode(0);
      |              ^~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_constraint_mode_unsup.v:19:9: Unsupported: 'constraint_mode()' on static constraint: 'cons'
                                                    : ... note: In instance 't'
   19 |       p.constraint_mode(0);
      |         ^~~~~~~~~~~~~~~
%Error: Exiting due to
